iVS941: Correctly represent names with standard YAML types

--- a/sbml/iVS941/reactions.yaml
+++ b/sbml/iVS941/reactions.yaml
@@ -801,7 +801,7 @@
   equation: '|M_ggdp_c[Cytosol]| + |M_gggp_c[Cytosol]| => |M_dgggp_c[Cytosol]| +
     |M_ppi_c[Cytosol]|'
 - id: R_DGGGPS2
-  name: !!python/str 'R_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_synthase'
+  name: R_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_synthase
   equation: '|M_3hggdp_c[Cytosol]| + |M_gggp_c[Cytosol]| => |M_3hdgggp_c[Cytosol]|
     + |M_ppi_c[Cytosol]|'
 - id: R_DGGPGP
