--- a/sbml/iVS941/compounds.yaml
+++ b/sbml/iVS941/compounds.yaml
@@ -101,34 +101,34 @@
   name: M_3_Dehydroshikimate_C7H7O5
   charge: -1
 - id: M_3hcdgggp_c
-  name: !!python/str 'M_CDP_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_C52H85N3O14P2'
+  name: M_CDP_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_C52H85N3O14P2
   charge: -2
 - id: M_3hdgggp_c
-  name: !!python/str 'M_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_C43H73O7P1'
+  name: M_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glycerol_C43H73O7P1
   charge: -2
 - id: M_3hdgggps_c
-  name: !!python/str 'M_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glyceroserine_C46H79N1O9P1'
+  name: M_2_O__3’_hydroxy_geranyl_3_O_geranyl_sn_glyceroserine_C46H79N1O9P1
   charge: -1
 - id: M_3hdggpg_c
-  name: !!python/str 'M_2_O__3__hydroxy_geranyl_3_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H80O9P1'
+  name: M_2_O__3__hydroxy_geranyl_3_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H80O9P1
   charge: -1
 - id: M_3hdggpgp_c
-  name: !!python/str 'M_2_O__3__hydroxy_geranyl_3_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_phosphate_C46H79O12P2'
+  name: M_2_O__3__hydroxy_geranyl_3_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_phosphate_C46H79O12P2
   charge: -3
 - id: M_3hdggpi_c
   name: M_2_O__3_hydroxy_geranyl_3_O_geranyl_sn_glycero_1_phospho_myo_inositol_C49H84O12P1
   charge: -1
 - id: M_3hdpgpe_c
-  name: !!python/str 'M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycero_l_phosphoethanolamine_C45H94O7N1P1'
+  name: M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycero_l_phosphoethanolamine_C45H94O7N1P1
   charge: 0
 - id: M_3hdpgpg_c
-  name: !!python/str 'M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycerol_1_phospho_3’’_sn_glycerol_C46H94O9P1'
+  name: M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycerol_1_phospho_3’’_sn_glycerol_C46H94O9P1
   charge: -1
 - id: M_3hdpgpi_c
   name: M_2_O__3__hydroxyl_phytanyl_3_O_phytanyl_sn_glycero_1_phospho_myo_inositol_C49H98O12P1
   charge: -1
 - id: M_3hdpgps_c
-  name: !!python/str 'M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycero_l_phosphoserine_C46H93N1O9P1'
+  name: M_2_O__3’_hydroxy_phytanyl_3_O_phytanyl_sn_glycero_l_phosphoserine_C46H93N1O9P1
   charge: -1
 - id: M_3hfrdp_c
   name: M_3_hydroxy_farnesyl_diphosphate_C15H27O8P2
@@ -1164,10 +1164,10 @@
   name: M_2_3_di_O_geranylgeranyl_sn_glyceroserine_C46H77N1O8P1
   charge: -1
 - id: M_dggpg_c
-  name: !!python/str 'M_2_3_di_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H78O8P1'
+  name: M_2_3_di_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H78O8P1
   charge: -1
 - id: M_dggpgp_c
-  name: !!python/str 'M_2_3_di_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_phosphate_C46H77O11P2'
+  name: M_2_3_di_O_geranyl_sn_glycerol_1_phospho_3’_sn_glycerol_phosphate_C46H77O11P2
   charge: -3
 - id: M_dggpi_c
   name: M_2_3_di_O_geranyl_sn_glycero_1_phospho_myo_inositol_C49H82O11P1
@@ -1263,7 +1263,7 @@
   name: M_2_3_O_phytanyl_sn_glycero_1_phosphoethanolamine_C45H94O6N1P1
   charge: 0
 - id: M_dpgpg_c
-  name: !!python/str 'M_2_3_di_O_phytanyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H94O8P1'
+  name: M_2_3_di_O_phytanyl_sn_glycerol_1_phospho_3’_sn_glycerol_C46H94O8P1
   charge: -1
 - id: M_dpgpi_c
   name: M_2_3_O_phytanyl_sn_glycero_1_phospho_myo_inositol_C49H98O11P1
