excel/iMR1_799: Fix import of compound information

--- a/excel/iMR1_799/compounds.yaml
+++ b/excel/iMR1_799/compounds.yaml
@@ -1062,21 +1062,21 @@
   formula_neutral: C5H11O8P
   charge: -2
   kegg: C01112
-- id: arab-L
+- id: arab-l
   name: L-Arabinose
   formula: C5H10O5
   formula_neutral: C5H10O5
   charge: 0
   kegg: C00259
   cas: 147-81-9
-- id: arabol-L
+- id: arabol-l
   name: L-Arabinono-1,4-lactone
   formula: C5H8O5
   formula_neutral: C5H8O5
   charge: 0
   kegg: C01114
   cas: 51532-86-6
-- id: arbnt-L
+- id: arbnt-l
   name: L-Arabinonate
   formula: C5H10O6
   formula_neutral: C5H10O6
@@ -1155,7 +1155,7 @@
   charge: -4
   kegg: C00002
   cas: 56-65-5
-- id: barab-L
+- id: barab-l
   name: beta-L-Arabinose
   formula: C5H10O5
   formula_neutral: C5H10O5
@@ -2228,13 +2228,6 @@
   formula: C9H19N3O3
   formula_neutral: C9H19N3O3
   charge: 1
-- id: glc-D
-  name: D-Glucose
-  formula: C6H12O6
-  formula_neutral: C6H12O6
-  charge: 0
-  kegg: C00031
-  cas: 50-99-7
 - id: glc-d
   name: D-Glucose
   formula: C6H12O6
@@ -2949,7 +2942,7 @@
   formula: C6H12O6
   formula_neutral: C6H12O6
   charge: 0
-  kegg: !!python/str 'C00159  '
+  kegg: C00159  
   cas: 3458-28-4
 - id: man1p
   name: D-Mannose 1-phosphate
@@ -3633,12 +3626,12 @@
   charge: -4
   kegg: C01182
   cas: 24218-00-6
-- id: rbl-L
+- id: rbl-l
   name: L-Ribulose
   formula: C5H10O5
   formula_neutral: C5H10O5
   charge: 0
-  kegg: !!python/str 'C00508 '
+  kegg: C00508 
   cas: 2042-27-5
 - id: rdmbzi
   name: N1-(alpha-D-ribosyl)-5,6-dimethylbenzimidazole
@@ -3672,13 +3665,6 @@
   formula: C977H1173N373O700P100
   formula_neutral: C977H1173N373O700P100
   charge: -100
-- id: ru5p-L
-  name: L-Ribulose 5-phosphate
-  formula: C5H11O8P
-  formula_neutral: C5H11O8P
-  charge: -2
-  kegg: C01101
-  cas: 2922-69-2
 - id: ru5p-d
   name: D-Ribulose 5-phosphate
   formula: C5H11O8P
@@ -3686,6 +3672,13 @@
   charge: -2
   kegg: C00199
   cas: 4151-19-3
+- id: ru5p-l
+  name: L-Ribulose 5-phosphate
+  formula: C5H11O8P
+  formula_neutral: C5H11O8P
+  charge: -2
+  kegg: C01101
+  cas: 2922-69-2
 - id: s
   name: sulfur
   formula: S
@@ -3891,13 +3884,13 @@
   charge: -1
   kegg: C00232
   cas: 692-29-5
-- id: tag6p-D
+- id: tag6p-d
   name: D-Tagatose 6-phosphate
   formula: C6H13O9P
   formula_neutral: C6H13O9P
   charge: -2
   kegg: C01097
-- id: tagdp-D
+- id: tagdp-d
   name: D-Tagatose 1,6-bisphosphate
   formula: C6H14O12P2
   formula_neutral: C6H14O12P2
@@ -3936,7 +3929,7 @@
   formula: C29H37N9O12
   formula_neutral: C29H37N9O12
   charge: 0
-  kegg: !!python/str 'C04144 '
+  kegg: C04144 
 - id: thm
   name: Thiamin
   formula: C12H16N4OS
