excel/iMA945: Correctly import names with quote characters

--- a/excel/iMA945/compounds.yaml
+++ b/excel/iMA945/compounds.yaml
@@ -201,25 +201,25 @@
   charge: -2
   kegg: C00681
 - id: 23camp
-  name: 2,3-Cyclic AMP
+  name: 2',3'-Cyclic AMP
   formula: C10H12N5O6P
   formula_neutral: C10H12N5O6P
   charge: -1
   kegg: C02353
 - id: 23ccmp
-  name: 2,3-Cyclic CMP
+  name: 2',3'-Cyclic CMP
   formula: C9H12N3O7P
   formula_neutral: C9H12N3O7P
   charge: -1
   kegg: C02354
 - id: 23cgmp
-  name: 2,3-Cyclic GMP
+  name: 2',3'-Cyclic GMP
   formula: C10H12N5O7P
   formula_neutral: C10H12N5O7P
   charge: -1
   kegg: C06194
 - id: 23cump
-  name: 2,3-Cyclic UMP
+  name: 2',3'-Cyclic UMP
   formula: C9H11N2O8P
   formula_neutral: C9H11N2O8P
   charge: -1
@@ -289,7 +289,7 @@
   charge: -1
   kegg: C02780
 - id: 25drapp
-  name: 2,5-Diamino-6-(ribosylamino)-4-(3H)-pyrimidinone 5-phosphate
+  name: 2,5-Diamino-6-(ribosylamino)-4-(3H)-pyrimidinone 5'-phosphate
   formula: C9H14N5O8P
   charge: -2
 - id: 26dap-LL
@@ -595,7 +595,7 @@
   charge: 0
   kegg: C05810
 - id: 2p4c2me
-  name: 2-phospho-4-(cytidine 5-diphospho)-2-C-methyl-D-erythritol
+  name: 2-phospho-4-(cytidine 5'-diphospho)-2-C-methyl-D-erythritol
   formula: C14H26N3O17P3
   formula_neutral: C14H26N3O17P3
 - id: 2pg
@@ -628,7 +628,7 @@
   charge: -1
   kegg: C03974
 - id: 2tpr3dpcoa
-  name: 2-(5-triphosphoribosyl)-3-dephospho-CoA
+  name: 2'-(5''-triphosphoribosyl)-3'-dephospho-CoA
   formula: C26H46N7O26P5S
   formula_neutral: C26H46N7O26P5S
   charge: -6
@@ -651,7 +651,7 @@
   charge: -1
   kegg: C01179
 - id: 3amp
-  name: 3-AMP
+  name: 3'-AMP
   formula: C10H14N5O7P
   formula_neutral: C10H14N5O7P
   charge: -2
@@ -675,7 +675,7 @@
   charge: -2
   kegg: C04236
 - id: 3cmp
-  name: 3-cmp
+  name: 3'-cmp
   formula: C9H14N3O8P
   formula_neutral: C9H14N3O8P
   charge: -2
@@ -697,7 +697,7 @@
   charge: -1
   kegg: C02637
 - id: 3gmp
-  name: 3-GMP
+  name: 3'-GMP
   formula: C10H14N5O8P
   formula_neutral: C10H14N5O8P
   charge: -2
@@ -810,7 +810,7 @@
   charge: -4
   kegg: C05260
 - id: 3ig3p
-  name: C-(3-Indolyl)-glycerol 3-phosphate
+  name: C'-(3-Indolyl)-glycerol 3-phosphate
   formula: C11H14NO6P
   formula_neutral: C11H14NO6P
   charge: -2
@@ -948,7 +948,7 @@
   charge: -2
   kegg: C00606
 - id: 3ump
-  name: 3-UMP
+  name: 3'-UMP
   formula: C9H13N2O9P
   formula_neutral: C9H13N2O9P
   charge: -2
@@ -989,7 +989,7 @@
   charge: -2
   kegg: C04556
 - id: 4c2me
-  name: 4-(cytidine 5-diphospho)-2-C-methyl-D-erythritol
+  name: 4-(cytidine 5'-diphospho)-2-C-methyl-D-erythritol
   formula: C14H25N3O14P2
   formula_neutral: C14H25N3O14P2
   charge: -2
@@ -1058,7 +1058,7 @@
   charge: -3
   kegg: C03393
 - id: 4ppan
-  name: D-4-Phosphopantothenate
+  name: D-4'-Phosphopantothenate
   formula: C9H18NO8P
   formula_neutral: C9H18NO8P
   charge: -3
@@ -1088,13 +1088,13 @@
   charge: 0
   kegg: C00430
 - id: 5aprbu
-  name: 5-Amino-6-(5-phosphoribitylamino)uracil
+  name: 5-Amino-6-(5'-phosphoribitylamino)uracil
   formula: C9H17N4O9P
   formula_neutral: C9H17N4O9P
   charge: -2
   kegg: C04454
 - id: 5apru
-  name: 5-Amino-6-(5-phosphoribosylamino)uracil
+  name: 5-Amino-6-(5'-phosphoribosylamino)uracil
   formula: C9H15N4O9P
   formula_neutral: C9H15N4O9P
   charge: -2
@@ -1133,7 +1133,7 @@
   charge: -2
   kegg: C00679
 - id: 5drib
-  name: 5-deoxyribose
+  name: 5'-deoxyribose
   formula: C5H10O4
   formula_neutral: C5H10O4
   charge: 0
@@ -1715,12 +1715,12 @@
   charge: -1
   kegg: C00108
 - id: ap4a
-  name: P1,P4-Bis(5-adenosyl) tetraphosphate
+  name: P1,P4-Bis(5'-adenosyl) tetraphosphate
   formula: C20H24N10O19P4
   charge: -4
   kegg: C01260
 - id: ap5a
-  name: P1,P5-Bis(5-adenosyl) pentaphosphate
+  name: P1,P5-Bis(5'-adenosyl) pentaphosphate
   formula: C20H24N10O22P5
   charge: -5
   kegg: C04058
@@ -1763,7 +1763,7 @@
   formula: HOR
   charge: 0
 - id: aps
-  name: Adenosine 5-phosphosulfate
+  name: Adenosine 5'-phosphosulfate
   formula: C10H14N5O10PS
   formula_neutral: C10H14N5O10PS
   charge: -2
@@ -2347,7 +2347,7 @@
   charge: 0
   kegg: C00559
 - id: dad-5
-  name: 5-Deoxyadenosine
+  name: 5'-Deoxyadenosine
   formula: C10H13N5O3
   charge: 0
   kegg: C05198
@@ -3113,7 +3113,7 @@
   formula_neutral: C16H23N5O15P2
   charge: -2
 - id: gdptp
-  name: Guanosine 3-diphosphate 5-triphosphate
+  name: Guanosine 3'-diphosphate 5'-triphosphate
   formula: C10H18N5O20P5
   formula_neutral: C10H18N5O20P5
   charge: -7
@@ -3302,7 +3302,7 @@
   charge: -2
   kegg: C00144
 - id: gp4g
-  name: P1,P4-Bis(5-guanosyl) tetraphosphate
+  name: P1,P4-Bis(5'-guanosyl) tetraphosphate
   formula: C20H24N10O21P4
   charge: -4
   kegg: C01261
@@ -3707,8 +3707,8 @@
   formula: C114H202N2O39P2
   charge: -6
 - id: lipidA
-  name: 2,3,23-Tetrakis(beta-hydroxymyristoyl)-D-glucosaminyl-1,6-beta-D-glucosamine
-    1,4-bisphosphate
+  name: 2,3,2'3'-Tetrakis(beta-hydroxymyristoyl)-D-glucosaminyl-1,6-beta-D-glucosamine
+    1,4'-bisphosphate
   formula: C68H130N2O23P2
   formula_neutral: C68H130N2O23P2
   charge: -4
@@ -3776,7 +3776,7 @@
   charge: 0
   kegg: C00208
 - id: malt6p
-  name: Maltose 6-phosphate
+  name: Maltose 6'-phosphate
   formula: C12H23O14P
   formula_neutral: C12H23O14P
   charge: -2
@@ -4263,7 +4263,7 @@
   charge: -1
   kegg: C00295
 - id: orot5p
-  name: Orotidine 5-phosphate
+  name: Orotidine 5'-phosphate
   formula: C10H13N2O11P
   formula_neutral: C10H13N2O11P
   charge: -3
@@ -4338,7 +4338,7 @@
   charge: -1
   kegg: C05764
 - id: pan4p
-  name: Pantetheine 4-phosphate
+  name: Pantetheine 4'-phosphate
   formula: C11H23N2O7PS
   formula_neutral: C11H23N2O7PS
   charge: -2
@@ -4350,19 +4350,19 @@
   charge: -1
   kegg: C00522
 - id: pap
-  name: Adenosine 3,5-bisphosphate
+  name: Adenosine 3',5'-bisphosphate
   formula: C10H15N5O10P2
   formula_neutral: C10H15N5O10P2
   charge: -4
   kegg: C00054
 - id: paps
-  name: 3-Phosphoadenylyl sulfate
+  name: 3'-Phosphoadenylyl sulfate
   formula: C10H15N5O13P2S
   formula_neutral: C10H15N5O13P2S
   charge: -4
   kegg: C00053
 - id: pdx5p
-  name: Pyridoxine 5-phosphate
+  name: Pyridoxine 5'-phosphate
   formula: C8H12NO6P
   formula_neutral: C8H12NO6P
   charge: -2
@@ -4596,7 +4596,7 @@
   charge: -4
   kegg: C00100
 - id: ppgpp
-  name: Guanosine 3,5-bis(diphosphate)
+  name: Guanosine 3',5'-bis(diphosphate)
   formula: C10H17N5O17P4
   formula_neutral: C10H17N5O17P4
   charge: -6
@@ -4760,7 +4760,7 @@
   charge: 2
   kegg: C00134
 - id: pyam5p
-  name: Pyridoxamine 5-phosphate
+  name: Pyridoxamine 5'-phosphate
   formula: C8H13N2O5P
   formula_neutral: C8H13N2O5P
   charge: -1
@@ -4778,7 +4778,7 @@
   charge: 0
   kegg: C00250
 - id: pydx5p
-  name: Pyridoxal 5-phosphate
+  name: Pyridoxal 5'-phosphate
   formula: C8H10NO6P
   formula_neutral: C8H10NO6P
   charge: -2
@@ -5290,7 +5290,7 @@
   charge: 0
   kegg: C01083
 - id: tre6p
-  name: alpha,alpha-Trehalose 6-phosphate
+  name: alpha,alpha'-Trehalose 6-phosphate
   formula: C12H23O14P
   formula_neutral: C12H23O14P
   charge: -2
@@ -5525,12 +5525,12 @@
   charge: -3
   kegg: C00015
 - id: udpLa4fn
-  name: uridine 5-diphospho-{beta}-4-deoxy-4-formamido-L-arabinose
+  name: uridine 5''-diphospho-{beta}-4-deoxy-4-formamido-L-arabinose
   formula: C15H23N3O16P2
   formula_neutral: C15H23N3O16P2
   charge: -2
 - id: udpLa4n
-  name: uridine 5-diphospho-{beta}-4-deoxy-4-amino-L-arabinose
+  name: uridine 5''-diphospho-{beta}-4-deoxy-4-amino-L-arabinose
   formula: C14H23N3O15P2
   formula_neutral: C14H23N3O15P2
   charge: -1
@@ -5654,7 +5654,7 @@
   charge: -3
   kegg: C01337
 - id: xmp
-  name: Xanthosine 5-phosphate
+  name: Xanthosine 5'-phosphate
   formula: C10H13N4O9P
   formula_neutral: C10H13N4O9P
   charge: -2
