excel/iCce806: Import original formula string

--- a/excel/iCce806/compounds.yaml
+++ b/excel/iCce806/compounds.yaml
@@ -1001,8 +1001,8 @@
   kegg: C01260
 - id: apoacp
   name: Apoprotein [acyl carrier protein]
-  formula: HOR
-  formula_neutral: HOR
+  formula: RHO
+  formula_neutral: RHO
   charge: 0
   kegg: C03688
 - id: aps
@@ -1146,8 +1146,8 @@
   cas: 63-38-7
 - id: cdpdag_CN
   name: CDPDiacylglycerol (Cyanothece)
-  formula: C2274H3864N150O750P100
-  formula_neutral: C2274H3864N150O750P100
+  formula: C2274H3864O750P100N150
+  formula_neutral: C2274H3864O750P100N150
   charge: -100
 - id: cell
   name: Cellulose
@@ -1780,8 +1780,8 @@
   cas: 146-17-8
 - id: formate
   name: Formate
-  formula: CHO2
-  formula_neutral: CHO2
+  formula: CH1O2
+  formula_neutral: CH1O2
   charge: -1
   kegg: C00058
   cas: 64-18-6
@@ -2012,8 +2012,8 @@
   charge: 0
 - id: glx
   name: Glyoxylate
-  formula: C2HO3
-  formula_neutral: C2HO3
+  formula: C2H1O3
+  formula_neutral: C2H1O3
   charge: -1
   kegg: C00048
   cas: 298-12-4
@@ -2543,8 +2543,8 @@
   cas: 78-98-8
 - id: mvpc
   name: monovinyl protochlorophyllide a
-  formula: C35H31MgN4O5
-  formula_neutral: C35H31MgN4O5
+  formula: C35H31N4O5Mg
+  formula_neutral: C35H31N4O5Mg
   charge: 1
 - id: myrsacp
   name: Myristoyl-ACP (n-C14:0ACP)
@@ -3376,8 +3376,8 @@
   kegg: C00343
 - id: trdrd
   name: Reduced thioredoxin
-  formula: H2X
-  formula_neutral: H2X
+  formula: XH2
+  formula_neutral: XH2
   charge: 0
   kegg: C00342
 - id: tre6p
@@ -3711,8 +3711,8 @@
   kegg: C02554
 - id: wo4
   name: tungstate
-  formula: O4W
-  formula_neutral: O4W
+  formula: WO4
+  formula_neutral: WO4
   charge: -2
 - id: xan
   name: Xanthine
