excel/iNJ661: Import original formula string

--- a/excel/iNJ661/compounds.yaml
+++ b/excel/iNJ661/compounds.yaml
@@ -12,7 +12,7 @@
   charge: -4
 - id: 1hdecg3p
   name: 1-hexadecanoyl-sn-glycerol 3-phosphate
-  formula: C19H37O7P
+  formula: C19H37O7P1
   charge: -2
 - id: 1msg3p
   name: 1-Acyl-sn-glycerol 3-phosphate (branched C19:0)
@@ -60,11 +60,11 @@
   charge: 0
 - id: 2agpe160
   name: 2-Acyl-sn-glycero-3-phosphoethanolamine (n-C16:0)
-  formula: C21H44NO7P
+  formula: C21H44NO7P1
   charge: 0
 - id: 2agpe180
   name: 2-Acyl-sn-glycero-3-phosphoethanolamine (n-C18:0)
-  formula: C23H48NO7P
+  formula: C23H48NO7P1
   charge: 0
 - id: 2ahbut
   name: (S)-2-Aceto-2-hydroxybutanoate
@@ -252,7 +252,7 @@
   charge: -1
 - id: 4hbzACP
   name: 4-hydroxybenzoyl ACP
-  formula: C18H25N2O9PSR
+  formula: C18H25N2O9PRS
   charge: -1
 - id: 4hthr
   name: 4-Hydroxy-L-threonine
@@ -364,7 +364,7 @@
   charge: 0
 - id: ACP
   name: acyl carrier protein
-  formula: C11H21N2O7PSR
+  formula: C11H21N2O7PRS
   charge: -1
 - id: Ac1PIM1
   name: acyl phosphatidylinositol mannoside (tuberculosis)
@@ -492,11 +492,11 @@
   charge: 0
 - id: adfdOX
   name: Oxidized adrenal ferredoxin
-  formula: KU
+  formula: UK
   charge: 2
 - id: adfdRD
   name: Reduced adrenal ferredoxin
-  formula: H2KU
+  formula: UKH2
   charge: 0
 - id: adhlam
   name: S-Acetyldihydrolipoamide
@@ -613,7 +613,7 @@
   charge: -1
 - id: apoACP
   name: apoprotein [acyl carrier protein]
-  formula: HOR
+  formula: RHO
   charge: 0
 - id: appl
   name: 1-Aminopropan-2-ol
@@ -650,7 +650,7 @@
   charge: -1
 - id: arachACP
   name: eicosanoyl-ACP
-  formula: C31H59N2O8PSR
+  formula: C31H59N2O8PRS
   charge: -1
 - id: arachcoa
   name: arachidyl coenzyme A
@@ -822,35 +822,35 @@
   charge: 2
 - id: cobya
   name: Cobyrinate
-  formula: C45H52CoN4O14
+  formula: C45H52N4O14Co
   charge: -6
 - id: codhpre6
   name: cobalt-dihydro-precorrin 6
-  formula: C44H47CoN4O16
+  formula: C44H47N4O16Co
   charge: -7
 - id: copre2
   name: cobalt-precorrin 2
-  formula: C42H38CoN4O16
+  formula: C42H38N4O16Co
   charge: -8
 - id: copre3
   name: cobalt-precorrin 3
-  formula: C43H40CoN4O16
+  formula: C43H40N4O16Co
   charge: -8
 - id: copre4
   name: cobalt-precorrin 4
-  formula: C44H43CoN4O16
+  formula: C44H43N4O16Co
   charge: -7
 - id: copre5
   name: cobalt-precorrin 5
-  formula: C45H45CoN4O16
+  formula: C45H45N4O16Co
   charge: -7
 - id: copre6
   name: cobalt-precorrin 6
-  formula: C44H45CoN4O16
+  formula: C44H45N4O16Co
   charge: -7
 - id: copre8
   name: cobalt-precorrin 8
-  formula: C45H52CoN4O14
+  formula: C45H52N4O14Co
   charge: -6
 - id: cpppg1
   name: Coproporphyrinogen I
@@ -1167,7 +1167,7 @@
 - id: fcmcbtt
   name: iron(III) chelated carboxymycobactin T (R=8 carbon, final carbon is carboxyl
     group)
-  formula: C33H48FeN5O13
+  formula: C33H48N5O13Fe
   charge: 4
 - id: fdox
   name: ferredoxin (oxidized) 2[4Fe-4S]
@@ -1187,7 +1187,7 @@
   charge: 0
 - id: fdxrd
   name: Reduced ferredoxin
-  formula: H2X
+  formula: XH2
   charge: 0
 - id: fe2
   name: Fe2+
@@ -1207,7 +1207,7 @@
   charge: 1
 - id: fmcbtt
   name: Iron(II) mycobactin T
-  formula: C43H71FeN5O10
+  formula: C43H71N5O10Fe
   charge: 4
 - id: fmettrna
   name: N-Formylmethionyl-tRNA
@@ -1227,7 +1227,7 @@
   charge: -1
 - id: for
   name: Formate
-  formula: CHO2
+  formula: CH1O2
   charge: -1
 - id: forcoa
   name: Formyl-CoA
@@ -1364,7 +1364,7 @@
   charge: 0
 - id: glx
   name: Glyoxylate
-  formula: C2HO3
+  formula: C2H1O3
   charge: -1
 - id: gly
   name: Glycine
@@ -1432,7 +1432,7 @@
   charge: 0
 - id: h2co3
   name: carbonic acid
-  formula: CH2O3
+  formula: H2CO3
   charge: 0
 - id: h2mb4p
   name: 1-hydroxy-2-methyl-2-(E)-butenyl 4-diphosphate
@@ -1609,15 +1609,15 @@
   charge: 1
 - id: kmeroacidACP
   name: keto meroacid ACP
-  formula: C69H131N2O8PSR
+  formula: C69H131N2O8PRS
   charge: -1
 - id: kmeroacidcyc1ACP
   name: cyclopropanated keto-meroacid ACP (1 cyclopropane ring)
-  formula: C70H133N2O8PSR
+  formula: C70H133N2O8PRS
   charge: -1
 - id: kmeroacidcyc2ACP
   name: cyclopropanated keto-meroacid ACP (2 cyclopropane rings)
-  formula: C71H135N2O8PSR
+  formula: C71H135N2O8PRS
   charge: -1
 - id: kmeroacidcyc2AMP
   name: cyclopropanated keto-meroacid AMP (2 cyclopropane rings)
@@ -1665,7 +1665,7 @@
   charge: -2
 - id: malACP
   name: Malonyl-[acyl-carrier protein]
-  formula: C14H22N2O10PSR
+  formula: C14H22N2O10PRS
   charge: -2
 - id: malcoa
   name: Malonyl-CoA
@@ -1713,19 +1713,19 @@
   charge: 2
 - id: meoh
   name: Methanol
-  formula: CH4O
+  formula: CH4O1
   charge: 0
 - id: meroacidACP
   name: alpha meroacid ACP
-  formula: C61H115N2O8PSR
+  formula: C61H115N2O8PRS
   charge: -1
 - id: meroacidcyc1ACP
   name: cyclopropanated alpha meroacid ACP (1 cyclopropane ring)
-  formula: C62H117N2O8PSR
+  formula: C62H117N2O8PRS
   charge: -1
 - id: meroacidcyc2ACP
   name: cyclopropanated alpha meroacid ACP (2 cyclopropane rings)
-  formula: C63H119N2O8PSR
+  formula: C63H119N2O8PRS
   charge: -1
 - id: meroacidcyc2AMP
   name: cyclopropanated alpha meroacid AMP (2 cyclopropane rings)
@@ -1781,11 +1781,11 @@
   charge: -2
 - id: mkmeroacidACP
   name: methyl hydroxy keto meroacid ACP (1 cyclopropane ring)
-  formula: C70H135N2O9PSR
+  formula: C70H135N2O9PRS
   charge: -1
 - id: mkmeroacidcyc1ACP
   name: cyclopropanated methyl hydroxy keto meroacid ACP (1 cyclopropane ring)
-  formula: C71H137N2O9PSR
+  formula: C71H137N2O9PRS
   charge: -1
 - id: mkmeroacidcyc1AMP
   name: cyclopropanated methyl hydroxy keto meroacid AMP (1 cyclopropane ring)
@@ -1809,15 +1809,15 @@
   charge: -5
 - id: mmeroacidACP
   name: methoxy meroacid ACP
-  formula: C67H127N2O8PSR
+  formula: C67H127N2O8PRS
   charge: -1
 - id: mmeroacidcyc1ACP
   name: cyclopropanated methoxy-meroacid ACP (1 cyclopropane ring)
-  formula: C68H129N2O8PSR
+  formula: C68H129N2O8PRS
   charge: -1
 - id: mmeroacidcyc2ACP
   name: cyclopropanated methoxy-meroacid ACP (2 cyclopropane rings)
-  formula: C69H131N2O8PSR
+  formula: C69H131N2O8PRS
   charge: -1
 - id: mmeroacidcyc2AMP
   name: cyclopropanated methoxy-meroacid AMP (2 cyclopropane rings)
@@ -1825,11 +1825,11 @@
   charge: -1
 - id: mmmeroacidACP
   name: methyl hydroxy methoxy meroacid ACP
-  formula: C68H131N2O9PSR
+  formula: C68H131N2O9PRS
   charge: -1
 - id: mmmeroacidcyc1ACP
   name: cyclopropanated methyl hydroxy methoxy meroacid ACP (1 cyclopropane ring)
-  formula: C69H133N2O9PSR
+  formula: C69H133N2O9PRS
   charge: -1
 - id: mmmeroacidcyc1AMP
   name: cyclopropanated methyl hydroxy methoxy meroacid AMP (1 cyclopropane ring)
@@ -1897,7 +1897,7 @@
   charge: 0
 - id: mstrACP
   name: 10methyl stearyoyl-ACP
-  formula: C30H57N2O8PSR
+  formula: C30H57N2O8PRS
   charge: -1
 - id: mycolate
   name: mycolate  (2 cyclopropanated rings)
@@ -2025,7 +2025,7 @@
   charge: -5
 - id: pa160
   name: 1,2-dihexadecanoyl-sn-glycerol 3-phosphate
-  formula: C35H67O8P
+  formula: C35H67O8P1
   charge: -2
 - id: pa160190
   name: 1,2-sn-glycerol 3-phosphate
@@ -2045,7 +2045,7 @@
   charge: 0
 - id: palmACP
   name: Palmitoyl-ACP (n-C16:0ACP)
-  formula: C27H51N2O8PSR
+  formula: C27H51N2O8PRS
   charge: -1
 - id: pan4p
   name: Pantetheine 4'-phosphate
@@ -2077,11 +2077,11 @@
   charge: -2
 - id: pe160
   name: phosphatidylethanolamine (dihexadecanoyl, n-C16:0)
-  formula: C37H74NO8P
+  formula: C37H74N1O8P1
   charge: 0
 - id: pe180
   name: phosphatidylethanolamine (dioctadecanoyl, n-C18:0)
-  formula: C41H82NO8P
+  formula: C41H82N1O8P1
   charge: 0
 - id: peamn
   name: Phenethylamine
@@ -2105,7 +2105,7 @@
   charge: -1
 - id: pg160
   name: Phosphatidylglycerol (dihexadecanoyl, n-C16:0)
-  formula: C38H74O10P
+  formula: C38H74O10P1
   charge: -1
 - id: pg160190
   name: Phosphatidylglycerol (hexadecanoyl, methylstearoyl)
@@ -2133,7 +2133,7 @@
   charge: -1
 - id: phdcaACP
   name: phenol palmitic acid ACP
-  formula: C34H57N2O9PSR
+  formula: C34H57N2O9PRS
   charge: -1
 - id: phdcacoa
   name: phenol palmitic coenzyme A
@@ -2301,7 +2301,7 @@
   charge: -1
 - id: prephthACP
   name: phthiocerol precursor bound ACP
-  formula: C43H81N2O11PSR
+  formula: C43H81N2O11PRS
   charge: -1
 - id: prephthcoa
   name: phthiocerol precursor bound coenzyme A
@@ -2313,7 +2313,7 @@
   charge: -1
 - id: prepphthACP
   name: phenolic phthiocerol precursor bound ACP
-  formula: C46H79N2O12PSR
+  formula: C46H79N2O12PRS
   charge: -1
 - id: prfp
   name: 1-(5-Phosphoribosyl)-5-[(5-phosphoribosylamino)methylideneamino]imidazole-4-carboxamide
@@ -2333,11 +2333,11 @@
   charge: -5
 - id: ps160
   name: phosphatidylserine (dihexadecanoyl, n-C16:0)
-  formula: C38H73NO10P
+  formula: C38H73N1O10P1
   charge: -1
 - id: ps180
   name: phosphatidylserine (dioctadecanoyl, n-C18:0)
-  formula: C42H81NO10P
+  formula: C42H81N1O10P1
   charge: -1
 - id: psd5p
   name: Pseudouridine 5'-phosphate
@@ -2421,7 +2421,7 @@
   charge: -2
 - id: ragund
   name: rhamanosyl-N-acetylglucosamyl-undecaprenyl diphosphate
-  formula: C69H113NO16P2
+  formula: C69H113N1O16P2
   charge: -2
 - id: rbl-D
   name: D-Ribulose
@@ -2449,7 +2449,7 @@
   charge: 0
 - id: rmyc
   name: mycolate compounds (all)
-  formula: CMYR
+  formula: RMYC
   charge: -1
 - id: rppdima
   name: rhamnose phenol phthiocerol dimycocerosate (Mtb)
@@ -2721,7 +2721,7 @@
   charge: 0
 - id: trdrd
   name: Reduced thioredoxin
-  formula: H2X
+  formula: XH2
   charge: 0
 - id: tre
   name: Trehalose
