--- a/excel/iNJ661v/compounds.yaml
+++ b/excel/iNJ661v/compounds.yaml
@@ -9,7 +9,7 @@
   formula: C3H4O10P2
 - id: 1hdecg3p
   name: 1-hexadecanoyl-sn-glycerol-3-phosphate
-  formula: C19H37O7P
+  formula: C19H37O7P1
 - id: 1msg3p
   name: 1-Acyl-sn-glycerol-3-phosphate-branched-C190
   formula: C22H43O7P
@@ -45,10 +45,10 @@
   formula: C7H14N2O4
 - id: 2agpe160
   name: 2-Acyl-sn-glycero-3-phosphoethanolamine-n-C160
-  formula: C21H44NO7P
+  formula: C21H44NO7P1
 - id: 2agpe180
   name: 2-Acyl-sn-glycero-3-phosphoethanolamine-n-C180
-  formula: C23H48NO7P
+  formula: C23H48NO7P1
 - id: 2ahbut
   name: S-2-Aceto-2-hydroxybutanoate
   formula: C6H9O4
@@ -189,7 +189,7 @@
   formula: C7H5O3
 - id: 4hbzACP
   name: 4-hydroxybenzoyl-ACP
-  formula: C18H25N2O9PSR
+  formula: C18H25N2O9PRS
 - id: 4hthr
   name: 4-Hydroxy-L-threonine
   formula: C4H9NO4
@@ -273,7 +273,7 @@
   formula: C9H17NO3
 - id: ACP
   name: acyl-carrier-protein
-  formula: C11H21N2O7PSR
+  formula: C11H21N2O7PRS
 - id: Ac1PIM1
   name: acyl-phosphatidylinositol-mannoside-tuberculosis
   formula: C66H124O19P
@@ -369,10 +369,10 @@
   formula: C5H5N5
 - id: adfdOX
   name: Oxidized-adrenal-ferredoxin
-  formula: KU
+  formula: UK
 - id: adfdRD
   name: Reduced-adrenal-ferredoxin
-  formula: H2KU
+  formula: UKH2
 - id: adhlam
   name: S-Acetyldihydrolipoamide
   formula: C10H19NO2S2
@@ -459,7 +459,7 @@
   formula: C7H6NO2
 - id: apoACP
   name: apoprotein-acyl-carrier-protein
-  formula: HOR
+  formula: RHO
 - id: appl
   name: 1-Aminopropan-2-ol
   formula: C3H10NO
@@ -486,7 +486,7 @@
   formula: C20H39O2
 - id: arachACP
   name: eicosanoyl-ACP
-  formula: C31H59N2O8PSR
+  formula: C31H59N2O8PRS
 - id: arachcoa
   name: arachidyl-coenzyme-A
   formula: C41H70N7O17P3S
@@ -615,28 +615,28 @@
   formula: Co
 - id: cobya
   name: Cobyrinate
-  formula: C45H52CoN4O14
+  formula: C45H52N4O14Co
 - id: codhpre6
   name: cobalt-dihydro-precorrin-6
-  formula: C44H47CoN4O16
+  formula: C44H47N4O16Co
 - id: copre2
   name: cobalt-precorrin-2
-  formula: C42H38CoN4O16
+  formula: C42H38N4O16Co
 - id: copre3
   name: cobalt-precorrin-3
-  formula: C43H40CoN4O16
+  formula: C43H40N4O16Co
 - id: copre4
   name: cobalt-precorrin-4
-  formula: C44H43CoN4O16
+  formula: C44H43N4O16Co
 - id: copre5
   name: cobalt-precorrin-5
-  formula: C45H45CoN4O16
+  formula: C45H45N4O16Co
 - id: copre6
   name: cobalt-precorrin-6
-  formula: C44H45CoN4O16
+  formula: C44H45N4O16Co
 - id: copre8
   name: cobalt-precorrin-8
-  formula: C45H52CoN4O14
+  formula: C45H52N4O14Co
 - id: cpppg1
   name: Coproporphyrinogen-I
   formula: C36H40N4O8
@@ -873,7 +873,7 @@
   formula: C6H11O8P
 - id: fcmcbtt
   name: iron-III-chelated-carboxymycobactin-T-R8-carbon-final-carbon-is-carboxyl-group
-  formula: C33H48FeN5O13
+  formula: C33H48N5O13Fe
 - id: fdox
   name: ferredoxin-oxidized-24Fe-4S
   formula: Fe8S8X
@@ -888,7 +888,7 @@
   formula: X
 - id: fdxrd
   name: Reduced-ferredoxin
-  formula: H2X
+  formula: XH2
 - id: fe2
   name: Fe2
   formula: Fe
@@ -903,7 +903,7 @@
   formula: C42H52FeN8O6S2
 - id: fmcbtt
   name: Iron-II-mycobactin-T
-  formula: C43H71FeN5O10
+  formula: C43H71N5O10Fe
 - id: fmettrna
   name: N-Formylmethionyl-tRNA
   formula: C6H9NO2SR
@@ -918,7 +918,7 @@
   formula: C19H18N7O6
 - id: for
   name: Formate
-  formula: CHO2
+  formula: CH1O2
 - id: forcoa
   name: Formyl-CoA
   formula: C22H32N7O17P3S
@@ -1020,7 +1020,7 @@
   formula: C5H7NO3R
 - id: glx
   name: Glyoxylate
-  formula: C2HO3
+  formula: C2H1O3
 - id: gly
   name: Glycine
   formula: C2H5NO2
@@ -1071,7 +1071,7 @@
   formula: H2
 - id: h2co3
   name: carbonic-acid
-  formula: CH2O3
+  formula: H2CO3
 - id: h2mb4p
   name: 1-hydroxy-2-methyl-2-E-butenyl-4-diphosphate
   formula: C5H9O8P2
@@ -1203,13 +1203,13 @@
   formula: K
 - id: kmeroacidACP
   name: keto-meroacid-ACP
-  formula: C69H131N2O8PSR
+  formula: C69H131N2O8PRS
 - id: kmeroacidcyc1ACP
   name: cyclopropanated-keto-meroacid-ACP-1-cyclopropane-ring
-  formula: C70H133N2O8PSR
+  formula: C70H133N2O8PRS
 - id: kmeroacidcyc2ACP
   name: cyclopropanated-keto-meroacid-ACP-2-cyclopropane-rings
-  formula: C71H135N2O8PSR
+  formula: C71H135N2O8PRS
 - id: kmeroacidcyc2AMP
   name: cyclopropanated-keto-meroacid-AMP-2-cyclopropane-rings
   formula: C70H127N5O8P
@@ -1245,7 +1245,7 @@
   formula: C4H4O5
 - id: malACP
   name: Malonyl-acyl-carrier-protein
-  formula: C14H22N2O10PSR
+  formula: C14H22N2O10PRS
 - id: malcoa
   name: Malonyl-CoA
   formula: C24H33N7O19P3S
@@ -1284,16 +1284,16 @@
   formula: C7H7O7
 - id: meoh
   name: Methanol
-  formula: CH4O
+  formula: CH4O1
 - id: meroacidACP
   name: alpha-meroacid-ACP
-  formula: C61H115N2O8PSR
+  formula: C61H115N2O8PRS
 - id: meroacidcyc1ACP
   name: cyclopropanated-alpha-meroacid-ACP-1-cyclopropane-ring
-  formula: C62H117N2O8PSR
+  formula: C62H117N2O8PRS
 - id: meroacidcyc2ACP
   name: cyclopropanated-alpha-meroacid-ACP-2-cyclopropane-rings
-  formula: C63H119N2O8PSR
+  formula: C63H119N2O8PRS
 - id: meroacidcyc2AMP
   name: cyclopropanated-alpha-meroacid-AMP-2-cyclopropane-rings
   formula: C62H111N5O8P
@@ -1338,10 +1338,10 @@
   formula: C7H7O7
 - id: mkmeroacidACP
   name: methyl-hydroxy-keto-meroacid-ACP-1-cyclopropane-ring
-  formula: C70H135N2O9PSR
+  formula: C70H135N2O9PRS
 - id: mkmeroacidcyc1ACP
   name: cyclopropanated-methyl-hydroxy-keto-meroacid-ACP-1-cyclopropane-ring
-  formula: C71H137N2O9PSR
+  formula: C71H137N2O9PRS
 - id: mkmeroacidcyc1AMP
   name: cyclopropanated-methyl-hydroxy-keto-meroacid-AMP-1-cyclopropane-ring
   formula: C70H129N5O9P
@@ -1359,22 +1359,22 @@
   formula: C25H35N7O19P3S
 - id: mmeroacidACP
   name: methoxy-meroacid-ACP
-  formula: C67H127N2O8PSR
+  formula: C67H127N2O8PRS
 - id: mmeroacidcyc1ACP
   name: cyclopropanated-methoxy-meroacid-ACP-1-cyclopropane-ring
-  formula: C68H129N2O8PSR
+  formula: C68H129N2O8PRS
 - id: mmeroacidcyc2ACP
   name: cyclopropanated-methoxy-meroacid-ACP-2-cyclopropane-rings
-  formula: C69H131N2O8PSR
+  formula: C69H131N2O8PRS
 - id: mmeroacidcyc2AMP
   name: cyclopropanated-methoxy-meroacid-AMP-2-cyclopropane-rings
   formula: C68H123N5O8P
 - id: mmmeroacidACP
   name: methyl-hydroxy-methoxy-meroacid-ACP
-  formula: C68H131N2O9PSR
+  formula: C68H131N2O9PRS
 - id: mmmeroacidcyc1ACP
   name: cyclopropanated-methyl-hydroxy-methoxy-meroacid-ACP-1-cyclopropane-ring
-  formula: C69H133N2O9PSR
+  formula: C69H133N2O9PRS
 - id: mmmeroacidcyc1AMP
   name: cyclopropanated-methyl-hydroxy-methoxy-meroacid-AMP-1-cyclopropane-ring
   formula: C68H125N5O9P
@@ -1425,7 +1425,7 @@
   formula: C34H58N4O24S2
 - id: mstrACP
   name: 10methyl-stearyoyl-ACP
-  formula: C30H57N2O8PSR
+  formula: C30H57N2O8PRS
 - id: mycolate
   name: mycolate-2-cyclopropanated-rings
   formula: C78H150O3
@@ -1521,7 +1521,7 @@
   formula: C23H31N7O19P3S
 - id: pa160
   name: 1-2-dihexadecanoyl-sn-glycerol-3-phosphate
-  formula: C35H67O8P
+  formula: C35H67O8P1
 - id: pa160190
   name: 1-2-sn-glycerol-3-phosphate
   formula: C38H73O8P
@@ -1536,7 +1536,7 @@
   formula: C8H8O
 - id: palmACP
   name: Palmitoyl-ACP-n-C160ACP
-  formula: C27H51N2O8PSR
+  formula: C27H51N2O8PRS
 - id: pan4p
   name: Pantetheine-4-phosphate
   formula: C11H21N2O7PS
@@ -1560,10 +1560,10 @@
   formula: C8H10NO6P
 - id: pe160
   name: phosphatidylethanolamine-dihexadecanoyl-n-C160
-  formula: C37H74NO8P
+  formula: C37H74N1O8P1
 - id: pe180
   name: phosphatidylethanolamine-dioctadecanoyl-n-C180
-  formula: C41H82NO8P
+  formula: C41H82N1O8P1
 - id: peamn
   name: Phenethylamine
   formula: C8H12N
@@ -1581,7 +1581,7 @@
   formula: C39H63N8O19
 - id: pg160
   name: Phosphatidylglycerol-dihexadecanoyl-n-C160
-  formula: C38H74O10P
+  formula: C38H74O10P1
 - id: pg160190
   name: Phosphatidylglycerol-hexadecanoyl-methylstearoyl
   formula: C41H80O10P
@@ -1602,7 +1602,7 @@
   formula: C23H37O3
 - id: phdcaACP
   name: phenol-palmitic-acid-ACP
-  formula: C34H57N2O9PSR
+  formula: C34H57N2O9PRS
 - id: phdcacoa
   name: phenol-palmitic-coenzyme-A
   formula: C44H68N7O18P3S
@@ -1728,7 +1728,7 @@
   formula: C32H61O5
 - id: prephthACP
   name: phthiocerol-precursor-bound-ACP
-  formula: C43H81N2O11PSR
+  formula: C43H81N2O11PRS
 - id: prephthcoa
   name: phthiocerol-precursor-bound-coenzyme-A
   formula: C53H92N7O20P3S
@@ -1737,7 +1737,7 @@
   formula: C35H59O6
 - id: prepphthACP
   name: phenolic-phthiocerol-precursor-bound-ACP
-  formula: C46H79N2O12PSR
+  formula: C46H79N2O12PRS
 - id: prfp
   name: 1-5-Phosphoribosyl-5-5-phosphoribosylamino-methylideneaminoimidazole-4-carboxamide
   formula: C15H21N5O15P2
@@ -1752,10 +1752,10 @@
   formula: C5H8O14P3
 - id: ps160
   name: phosphatidylserine-dihexadecanoyl-n-C160
-  formula: C38H73NO10P
+  formula: C38H73N1O10P1
 - id: ps180
   name: phosphatidylserine-dioctadecanoyl-n-C180
-  formula: C42H81NO10P
+  formula: C42H81N1O10P1
 - id: psd5p
   name: Pseudouridine-5-phosphate
   formula: C9H11N2O9P
@@ -1818,7 +1818,7 @@
   formula: C5H9O8P
 - id: ragund
   name: rhamanosyl-N-acetylglucosamyl-undecaprenyl-diphosphate
-  formula: C69H113NO16P2
+  formula: C69H113N1O16P2
 - id: rbl-D
   name: D-Ribulose
   formula: C5H10O5
@@ -1839,7 +1839,7 @@
   formula: C17H20N4O6
 - id: rmyc
   name: mycolate-compounds-all
-  formula: CMYR
+  formula: RMYC
 - id: rppdima
   name: rhamnose-phenol-phthiocerol-dimycocerosate-Mtb
   formula: C105H198O10
@@ -2043,7 +2043,7 @@
   formula: X
 - id: trdrd
   name: Reduced-thioredoxin
-  formula: H2X
+  formula: XH2
 - id: tre
   name: Trehalose
   formula: C12H22O11
